fix: overlap of close button with structre tree container in mobile view

--- a/m-hub-frontend/src/app/components/structure-view/structure-view.component.scss
+++ b/m-hub-frontend/src/app/components/structure-view/structure-view.component.scss
@@ -73,5 +73,6 @@
 
     .structure-tree-container {
         margin-left: 0;
+        margin-top: 42px;
     }
 }
